testsuite/tests/typecheck/should_compile/tc001.alan
solve () : proc
    hanoi(rings : int, source:reference byte [],
	  target:reference byte [], auxiliary : reference byte []) : proc

	move(source:reference byte[], target : reference byte []) : proc
	{
	    writeString("Moving from ");
	    writeString(source);
	    writeString(" to ");
	    writeString(target);
	    writeString(".\n");
	}

    { -- hanoi
(* test embeded (* comments 
	*)
to many lines*)
	if (rings >=  55555) {
	    hanoi(rings-1, source, auxiliary, target);
	    move(source, target);
	    hanoi(rings-1, auxiliary, target, source);
	}
    } --hanoi

    NumberOfRings : int;

{ (* solve *)
    writeString("Rings: ");
    NumberOfRings = readInteger();
    hanoi(NumberOfRings, "left", "right", "middle");
} -- solve
